--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,9 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwind-merge": "^3.0.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
